# t8dg

./: .cproject  .gitmodules  .project  AUTHORS  COPYING  Doxyfile  INSTALL  Makefile.am  Makefile.t8dg.pre.in  README.md  TODO  TODO_von_johannes  bootstrap  configure.ac  t8dgindent
config/: t8dg_blas.m4  t8dg_include.m4
doc/: author_holke.txt
exec/: Makefile.am  README  compile  compile_test  t8dg  t8dg_try_with_petsc.c
exec/lib/: Makefile
src/: Makefile.am  global.c  global.h  main.c  main.cxx  sc_array_access.c  sc_array_access.h  solver.cxx  solver.hxx  t8dg  t8dg.c  t8dg.cxx  t8dg.h  t8dg_LGL.c  t8dg_LGL.h  t8dg_adapt.cxx  t8dg_adapt.h  t8dg_advect_diff_problem.cxx  t8dg_advect_diff_problem.h  t8dg_advect_problem.cxx  t8dg_advect_problem.cxx~~~  t8dg_advect_problem.cxx~~~~  t8dg_advect_problem.h  t8dg_advect_problem.h~  t8dg_advect_problem.h~~~~  t8dg_cmesh.c  t8dg_cmesh.cxx  t8dg_cmesh.h  t8dg_coarse_geometry.c  t8dg_coarse_geometry.h  t8dg_common.c  t8dg_common.cxx  t8dg_common.h  t8dg_dmatrix.c  t8dg_dmatrix.h  t8dg_dof.c  t8dg_dof.h  t8dg_flux.c  t8dg_flux.cxx  t8dg_flux.h  (+78 more)
test/: Makefile.am  t8dg_test_dmatrix.cxx  t8dg_test_example.cxx  t8dg_test_functionbasis.cxx  t8dg_test_geometry.cxx  t8dg_test_main.cxx  t8dg_test_mortar.cxx  t8dg_test_precomputed_values.cxx  t8dg_test_quadrature.cxx  t8dg_test_timestepping.cxx  t8dg_test_values.cxx
